--- a/demo1301/demo1301.csproj
+++ b/demo1301/demo1301.csproj
@@ -27,8 +27,11 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.8" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Helpers\" />
+	<ItemGroup>
+		<AvaloniaResource Include="Assets\**"/>
+	</ItemGroup>
+
+	<ItemGroup>
     <Folder Include="Assets\" />
   </ItemGroup>
 </Project>
